fix: remove button layout bug

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -379,7 +379,7 @@ body {
         flex-grow: 1.8;
       }
       .space {
-        flex-grow: 7.2;
+        flex-grow: 7.8;
       }
     }
   }
